--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "caniuse-lite": "^1.0.30001562",
     "framer-motion": "^10.10.0",
     "next": "^13.5.6",
     "react": "18.2.0",
