--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "caniuse-lite": "^1.0.30001562",
     "framer-motion": "^10.10.0",
     "next": "^13.5.6",
+    "particles-bg": "^2.5.5",
     "react": "18.2.0",
     "react-18-image-lightbox": "^5.1.4",
     "react-bootstrap": "^2.9.1",
@@ -22,10 +23,14 @@
     "react-intersection-observer": "^9.4.3",
     "react-modal-image": "^2.6.0",
     "react-modal-video": "^2.0.0",
+    "react-particles": "^2.12.2",
+    "react-phone-number-input": "^3.3.7",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-use": "^17.4.0",
     "sass": "^1.60.0",
     "slick-carousel": "^1.8.1",
+    "tsparticles": "^2.12.0",
     "wowjs": "^1.1.3"
   }
 }
